hestia-i2c: add /api/recent data API

--- a/software/hestia-i2c/src/hestia/templates/home.html
+++ b/software/hestia-i2c/src/hestia/templates/home.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-<h1>Hestia API server</h1>
-<p>Were you looking for the <a href="https://uts.dashboard.space">web app</a>?</p>
+<h1>Hestia control panel</h1>
+<div class="status">
+
+</div>
 
 <h3>Log files</h3>
 <ul>
