--- a/software/hestia-i2c/src/hestia/templates/home.html
+++ b/software/hestia-i2c/src/hestia/templates/home.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hestia API server</title>
+    <title>Hestia control panel</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='hestia-favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script defer src="{{ url_for('static', filename='status.js') }}"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
