--- a/software/hestia-i2c/src/hestia/static/style.css
+++ b/software/hestia-i2c/src/hestia/static/style.css
@@ -1,19 +1,45 @@
-body {
-    font-family: Helvetica, sans-serif;
-    font-size: 16px;
+header {
+  padding: 40px 0;
+  background: #f6f5f4;
+  border-bottom: .1rem solid #ccc;
+}
+h1.title {
+  font-size: 36px;
+  line-height: 60px;
+  height: 60px;
+  padding-left: 60px;
+  background-image: url('/static/hestia-logo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: left 50%;
+  margin-bottom: 0;
 }
 
-h1 {
-    font-weight: 200;
-    font-size: 28px;
-}
-h2 {
-    font-weight: 400;
-    font-size: 24px;
-}
-h3 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #666;
+section {
+  margin-top: 40px;
 }
 
+/* Custom color for links and buttons */
+a {
+  color: #FF9041;
+  text-decoration: underline;
+}
+a:visited {
+  color: #9041FF;
+}
+button {
+  background-color: #FF9041;
+  border-color: #FF9041;
+}
+button.button-clear,
+button.button-outline {
+  background-color: transparent;
+  color: #FF9041;
+}
+button.button-clear {
+  border-color: transparent;
+}
+
+ul li {
+  margin-bottom: 0; /* don't space out list items */
+}
