--- a/software/hestia-i2c/src/hestia/templates/home.html
+++ b/software/hestia-i2c/src/hestia/templates/home.html
@@ -5,57 +5,77 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hestia control panel</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='hestia-favicon.ico') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <script defer src="{{ url_for('static', filename='status.js') }}"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="shortcut icon" href="/static/hestia-favicon.ico">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
+    <link rel="stylesheet" href="/static/style.css">
+
+    <script defer src="/static/status.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/index.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
-    <script defer src="{{ url_for('static', filename='chart.js') }}"></script>
+    <script defer
+            src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@2.0.1/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script defer src="/static/chart.js"></script>
 </head>
 <body>
+<header id="header">
+    <section class="container">
+        <h1 class="title">Hestia control panel</h1>
+    </section>
+</header>
+<main class="container">
+    <section id="status-section">
+        <h3>Status</h3>
+        <div class="row">
+            <div class="column column-20"><label for="core-temperature">Core temperature</label></div>
+            <div class="column column-20"><input disabled id="core-temperature" size="10" value="n/a"></div>
+        </div>
+        <div class="row">
+            <div class="column column-20"><label for="heater-mode">Heater mode</label></div>
+            <div class="column column-20"><input disabled id="heater-mode" size="10" value="n/a"></div>
+            <div class="column column-60">
+                <button id="heater-toggle">Toggle</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column column-20"><label for="heater-power-level">Power level</label></div>
+            <div class="column column-20"><input disabled id="heater-power-level" size="10" value="n/a"></div>
+            <div class="column column-60">
+                <button class="set-heater-power" data-power-level="50">Low</button>
+                <button class="set-heater-power" data-power-level="150">Medium</button>
+                <button class="set-heater-power" data-power-level="255">Full</button>
+            </div>
+        </div>
+    </section>
 
-<h1>Hestia control panel</h1>
+    <section id="chart-section">
+        <h3>Temperature chart</h3>
+        <div style="max-width: 800px; height: 400px">
+            <canvas id="temperature-chart"></canvas>
+        </div>
+    </section>
 
-<h3>Status</h3>
-<div style="display: flex">
-    <div><label for="core-temperature">Core temperature</label></div>
-    <div><input disabled id="core-temperature" size="10" value="n/a"></div>
-</div>
-<div style="display: flex">
-    <div><label for="heater-mode">Heater mode</label></div>
-    <div><input disabled id="heater-mode" size="10" value="n/a"></div>
-    <div><button id="heater-toggle">Toggle</button></div>
-</div>
-<div style="display: flex">
-    <div><label for="heater-power-level">Power level</label></div>
-    <div><input disabled id="heater-power-level" size="10" value="n/a"></div>
-    <div>
-        <button class="set-heater-power" data-power-level="50">Low</button>
-        <button class="set-heater-power" data-power-level="150">Medium</button>
-        <button class="set-heater-power" data-power-level="255">Full</button>
-    </div>
-</div>
+    <section id="log-section">
+        <h3>Log files</h3>
+        <ul>
+            {% for l in log_files %}
+            <li><a href="{{ l.url }}">{{ l.name }}</a></li>
+            {% endfor %}
+        </ul>
+    </section>
 
-<h3>Temperature chart</h3>
-<div style="max-width: 800px; height: 400px">
-    <canvas id="temperature-chart"></canvas>
-</div>
-
-<h3>Log files</h3>
-<ul>
-    {% for l in log_files %}
-        <li><a href="{{ l.url }}">{{ l.name }}</a></li>
-    {% endfor %}
-</ul>
-
-<h3>Development APIs</h3>
-<ul>
-    <li><a href="/api">API Overview</a></li>
-    <li><a href="/api/status">Status</a></li>
-    <li><a href="/api/data">Latest data</a></li>
-    <li><a href="/api/log_data">Recently logged data</a></li>
-</ul>
+    <section id="dev-section">
+        <h3>Development APIs</h3>
+        <ul>
+            <li><a href="/api">API Overview</a></li>
+            <li><a href="/api/status">Status</a></li>
+            <li><a href="/api/data">Latest data</a></li>
+            <li><a href="/api/log_data">Recently logged data</a></li>
+        </ul>
+    </section>
+</main>
 
 </body>
 </html>
