hestia-i2c: show heater on chart as filled area, add duration setting

--- a/software/hestia-i2c/src/hestia/templates/home.html
+++ b/software/hestia-i2c/src/hestia/templates/home.html
@@ -51,8 +51,16 @@
     </section>
 
     <section id="chart-section">
-        <h3>Temperature chart</h3>
-        <div style="max-width: 800px; height: 400px">
+        <div style="display: flex; justify-content: space-between; width: 800px">
+            <h3>Temperature chart</h3>
+            <div class="duration-selector" style="font-size: 14px">
+                <a href="#d5" data-duration-mins="5">5 mins</a> •
+                <a href="#d10" data-duration-mins="10">10 mins</a> •
+                <a href="#d30" data-duration-mins="30">30 mins</a>
+            </div>
+        </div>
+
+        <div style="height: 400px; width: 800px">
             <canvas id="temperature-chart"></canvas>
         </div>
     </section>
