hestia-dash: add thermostat controls to dashboard
- fix issue where new sensors weren't labelled correctly on chart
- fix power level to duty cycle calc
- restyle buttons

--- a/hestia-dash/src/hestia/static/style.css
+++ b/hestia-dash/src/hestia/static/style.css
@@ -33,6 +33,8 @@ a:visited {
 button {
     background-color: #FF9041;
     border-color: #FF9041;
+    font-size: 13px;
+    padding: 0 1.0rem;
 }
 
 button.button-clear,
