#47: Update dashboard to support two boards
- use "top" and "bottom" as board IDs in JSON API instead of 1 and 2
- switch to tailwind for styling
- new build.sh and run.sh to build and run standalone server
- add -top and -bottom to controls in HTML
- update JS to set values for each board
- still some things to get working
- new design needs more work and testing on different screen sizes

--- a/hestia-static-dash/static/style.css
+++ b/hestia-static-dash/static/style.css
@@ -9,7 +9,7 @@ h1.title {
     line-height: 60px;
     height: 60px;
     padding-left: 60px;
-    background-image: url('/static/hestia-logo.png');
+    background-image: url('/static/uts-logo.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: left 50%;
