--- a/hestia-static-dash/static/tailwind-output.css
+++ b/hestia-static-dash/static/tailwind-output.css
@@ -454,10 +454,10 @@ h3 {
 }
 
 h4 {
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   margin-bottom: 0.5rem;
   --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
+  color: rgb(56 189 248 / var(--tw-text-opacity));
 }
 
 input {
@@ -739,6 +739,10 @@ button:hover {
   grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
+.grid-cols-controls {
+  grid-template-columns: max-content max-content auto;
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -757,6 +761,24 @@ button:hover {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
 }
 
 .bg-zinc-950 {
