--- a/hestia-static-dash/static/tailwind-input.css
+++ b/hestia-static-dash/static/tailwind-input.css
@@ -31,13 +31,13 @@
 }
 
 @layer components {
-    #board-chart-container {
+    .board-chart-container {
         position: relative;
         height: 400px;
         width: 480px; /* leave space on RHS for mounted sensors */
     }
 
-    #board-chart-container::before { /* use ::before element so we can set opacity without affecting chart */
+    .board-chart-container::before { /* use ::before element so we can set opacity without affecting chart */
         background-image: url('/static/hestia-board-top.png');
         background-size: contain;
         background-position: left center;
@@ -52,7 +52,7 @@
         z-index: -1; /* ensure background is behind chart */
     }
     
-    #board-chart-container.flip::before {
+    .board-chart-container.flip::before {
         background-image: url('/static/hestia-board-bottom.png');
         transform: scaleX(-1);
     }
