--- a/hestia-static-dash/static/tailwind-output.css
+++ b/hestia-static-dash/static/tailwind-output.css
@@ -631,14 +631,14 @@ button:hover {
   }
 }
 
-#board-chart-container {
+.board-chart-container {
   position: relative;
   height: 400px;
   width: 480px;
   /* leave space on RHS for mounted sensors */
 }
 
-#board-chart-container::before {
+.board-chart-container::before {
   /* use ::before element so we can set opacity without affecting chart */
   background-image: url('/static/hestia-board-top.png');
   background-size: contain;
@@ -656,7 +656,7 @@ button:hover {
   /* ensure background is behind chart */
 }
 
-#board-chart-container.flip::before {
+.board-chart-container.flip::before {
   background-image: url('/static/hestia-board-bottom.png');
   transform: scaleX(-1);
 }
@@ -667,14 +667,6 @@ button:hover {
 
 .col-span-2 {
   grid-column: span 2 / span 2;
-}
-
-.col-span-3 {
-  grid-column: span 3 / span 3;
-}
-
-.col-span-4 {
-  grid-column: span 4 / span 4;
 }
 
 .mx-auto {
@@ -719,24 +711,12 @@ button:hover {
   width: 800px;
 }
 
-.w-auto {
-  width: auto;
-}
-
 .max-w-screen-lg {
   max-width: 1024px;
 }
 
 .list-disc {
   list-style-type: disc;
-}
-
-.auto-cols-auto {
-  grid-auto-columns: auto;
-}
-
-.grid-cols-6 {
-  grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
 .grid-cols-controls {
@@ -755,21 +735,8 @@ button:hover {
   justify-content: space-between;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-x-2 {
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
-}
-
-.gap-y-4 {
-  row-gap: 1rem;
 }
 
 .gap-x-4 {
