--- a/hestia-static-dash/static/tailwind-output.css
+++ b/hestia-static-dash/static/tailwind-output.css
@@ -460,10 +460,13 @@ h4 {
   color: rgb(56 189 248 / var(--tw-text-opacity));
 }
 
-input {
+input,
+    select {
   border-radius: 0.125rem;
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
   font-size: 0.75rem;
   line-height: 1rem;
   --tw-text-opacity: 1;
@@ -474,7 +477,7 @@ input {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
+  color: rgb(212 212 216 / var(--tw-text-opacity));
 }
 
 button {
@@ -483,8 +486,8 @@ button {
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
   font-size: 0.75rem;
   line-height: 1rem;
   font-weight: 600;
@@ -744,8 +747,17 @@ button:hover {
        column-gap: 1rem;
 }
 
+.gap-y-1 {
+  row-gap: 0.25rem;
+}
+
 .gap-y-2 {
   row-gap: 0.5rem;
+}
+
+.border-zinc-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(244 244 245 / var(--tw-border-opacity));
 }
 
 .bg-zinc-950 {
@@ -775,6 +787,10 @@ button:hover {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
 }
 
 .text-zinc-200 {
